# lean-hackathon

LeanMowers/: LICENSE  LeanMowers_VerifiedEDA_Presentation.pptx  README.md  pyproject.toml  start.bat  start.sh
LeanMowers/examples/: example_usage.py
LeanMowers/lean/: VerifiedEDA.lean  lake-manifest.json  lakefile.lean
LeanMowers/lean/VerifiedEDA/: Advanced.lean  Agent.lean  AgentProofs.lean  Defs.lean  Proofs.lean  Retry.lean
LeanMowers/scripts/: run_lean_check.sh
LeanMowers/tests/: test_correlation.py  test_pipeline.py  test_stats.py
LeanMowers/ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
LeanMowers/ui/backend/: requirements.txt  server.py
LeanMowers/ui/scripts/: start.bat  start.sh
LeanMowers/ui/src/: App.jsx
LeanMowers/ui/src/lib/: api.js
LeanMowers/ui/src/styles/: globals.css
LeanMowers/verified_eda/: __init__.py  correlation.py  pipeline.py  stats.py
LeanMowers/verified_eda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
LeanMowers/verified_eda/agents/: __init__.py  certifier.py  orchestrator.py  prover.py  translator.py
