[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verified-eda"
version = "1.0.0"
description = "Formally Verified Exploratory Data Analysis — Python × Lean 4 × Agentic AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Verified EDA Contributors" }]
keywords = ["eda", "formal-verification", "lean4", "statistics", "agentic-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []

[project.optional-dependencies]
llm = ["anthropic>=0.30"]
numpy = ["numpy>=1.26"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]
all = ["verified-eda[llm,numpy,dev]"]

[project.urls]
Repository = "https://github.com/your-org/verified-eda"
Documentation = "https://github.com/your-org/verified-eda#readme"

[tool.setuptools.packages.find]
include = ["verified_eda*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
